[REFACTOR] Rename calculationButton in src/gui/main_window.ui
Renamed to calculateButton.

--- a/src/gui/main_window.ui
+++ b/src/gui/main_window.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QPushButton" name="calculationButton">
+  <widget class="QPushButton" name="calculateButton">
    <property name="geometry">
     <rect>
      <x>140</x>
