--- a/src/gui/main_window.ui
+++ b/src/gui/main_window.ui
@@ -35,6 +35,9 @@
      <height>24</height>
     </rect>
    </property>
+   <property name="minimum">
+    <double>-100.000000000000000</double>
+   </property>
   </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
@@ -81,6 +84,9 @@
      <height>24</height>
     </rect>
    </property>
+   <property name="minimum">
+    <double>-100.000000000000000</double>
+   </property>
   </widget>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
@@ -108,6 +114,12 @@
      <width>68</width>
      <height>24</height>
     </rect>
+   </property>
+   <property name="minimum">
+    <double>-100.000000000000000</double>
+   </property>
+   <property name="maximum">
+    <double>100.000000000000000</double>
    </property>
   </widget>
   <widget class="QLabel" name="label_4">
